atlas/config/iptables.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p udp --dport 53 -j REDIRECT -m comment --comment "DNS-UDP"
-A PREROUTING -i eth0 -p tcp --dport 53 -j REDIRECT -m comment --comment "DNS-TCP"
#-A PREROUTING -i eth0 -p udp --dport 123 -j REDIRECT -m comment --comment "NTP"
#-A POSTROUTING -o eth0 -p udp --dport 123 -j MASQUERADE -m comment --comment "NTP MASQUERADE"
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:SIMPLE-FIREWALL - [0:0]
:LOGDROP - [0:0]
:TCP-FW - [0:0]
:UDP-FW - [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -i eth1 -p udp --sport 1194 -j ACCEPT
-A INPUT -j SIMPLE-FIREWALL

-A FORWARD -p ipv6 -j ACCEPT
-A FORWARD -o eth1 -d 0.0.0.0/8 -j LOGDROP
-A FORWARD -o eth1 -d 10.0.0.0/8 -j LOGDROP
-A FORWARD -o eth1 -d 127.0.0.0/8 -j LOGDROP
-A FORWARD -o eth1 -d 192.168.8.1 -j ACCEPT
-A FORWARD -o eth1 -d 192.168.0.0/16 -j LOGDROP
-A FORWARD -s 192.168.8.128/25 ! -d 192.168.8.0/24 -m comment --comment "block iot2internet" -j LOGDROP
-A FORWARD ! -s 192.168.8.0/24 -d 192.168.8.128/25 -m comment --comment "block internet2iot" -j LOGDROP
-A FORWARD -s 192.168.8.0/24 -j ACCEPT
-A FORWARD -i eth1 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP-FW
-A FORWARD -i eth1 -p udp -m conntrack --ctstate NEW -j UDP-FW
-A FORWARD -j SIMPLE-FIREWALL

-A SIMPLE-FIREWALL -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A SIMPLE-FIREWALL -m conntrack --ctstate INVALID -j LOGDROP
-A SIMPLE-FIREWALL -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A SIMPLE-FIREWALL -p tcp --tcp-flags ALL NONE -j LOGDROP
-A SIMPLE-FIREWALL -p tcp --tcp-flags ALL ALL -j LOGDROP
-A SIMPLE-FIREWALL -m limit --limit 4/min -j LOG --log-prefix "iptables-dropped(polite): "
-A SIMPLE-FIREWALL -p udp -j REJECT --reject-with icmp-port-unreachable
-A SIMPLE-FIREWALL -p tcp -j REJECT --reject-with tcp-reset
-A SIMPLE-FIREWALL -j REJECT --reject-with icmp-proto-unreachable

-A LOGDROP -m limit --limit 4/min -j LOG --log-prefix "iptables-dropped: "
-A LOGDROP -j DROP

-A TCP-FW -p tcp -m multiport --dports 6889:6900 -m comment --comment "Torrent" -j ACCEPT
-A UDP-FW -p udp -m multiport --dports 6889:6900 -m comment --comment "Torrent" -j ACCEPT
COMMIT

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 239.0.0.0/8 -j TTL --ttl-inc 1
COMMIT
